.metals/metals.log
2023.12.10 18:18:55 INFO  Started: Metals version 1.1.0 in folders 'T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad' for client Visual Studio Code 1.85.0.
2023.12.10 18:18:56 ERROR Unexpected error initializing server: 
scala.concurrent.Future$$anon$2: Future.filter predicate is not satisfied

2023.12.10 18:18:57 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 18:19:01 INFO  no build target found for T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala. Using presentation compiler with project's scala-library version: 3.3.1
2023.12.10 18:19:03 WARN  Could not find semantic tokens for: file:///T:/домашка_СГТУ/Малые%20взянные/5/docker-hadoop-mapreduce-vlad/ScalaJson.scala
2023.12.10 18:19:24 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaTcpSocket.scala
2023.12.10 18:19:24 WARN  Could not find semantic tokens for: file:///T:/домашка_СГТУ/Малые%20взянные/5/docker-hadoop-mapreduce-vlad/ScalaTcpSocket.scala
2023.12.10 18:19:28 WARN  Could not find semantic tokens for: file:///T:/домашка_СГТУ/Малые%20взянные/5/docker-hadoop-mapreduce-vlad/ScalaJson.scala
2023.12.10 18:19:29 WARN  Could not find semantic tokens for: file:///T:/домашка_СГТУ/Малые%20взянные/5/docker-hadoop-mapreduce-vlad/ScalaTcpSocket.scala
2023.12.10 18:19:30 WARN  Could not find semantic tokens for: file:///T:/домашка_СГТУ/Малые%20взянные/5/docker-hadoop-mapreduce-vlad/ScalaJson.scala
2023.12.10 18:23:22 WARN  Could not find semantic tokens for: file:///T:/домашка_СГТУ/Малые%20взянные/5/docker-hadoop-mapreduce-vlad/ScalaTcpSocket.scala
2023.12.10 18:23:30 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaTcpSocket.scala
2023.12.10 18:26:40 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaTcpSocket.scala
2023.12.10 18:27:51 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaTcpSocket.scala
2023.12.10 18:27:56 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaTcpSocket.scala
2023.12.10 18:31:23 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaTcpSocket.scala
2023.12.10 18:31:58 WARN  Could not find semantic tokens for: file:///T:/домашка_СГТУ/Малые%20взянные/5/docker-hadoop-mapreduce-vlad/ScalaJson.scala
2023.12.10 18:32:48 WARN  Could not find semantic tokens for: file:///T:/домашка_СГТУ/Малые%20взянные/5/docker-hadoop-mapreduce-vlad/ScalaJson.scala
2023.12.10 18:32:55 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 18:33:46 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaTcpSocket.scala
2023.12.10 18:33:50 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 18:38:14 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 18:41:34 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 18:42:17 ERROR Failed to tokenize input for semantic tokens for T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
scala.meta.tokenizers.TokenizeException: <input>:77: error: unclosed string literal
      resultDF.write.mode("append").json("/scalasaves/prefix2"")
                                                              ^
	at scala.meta.internal.tokenizers.Reporter.syntaxError(Reporter.scala:23)
	at scala.meta.internal.tokenizers.Reporter.syntaxError$(Reporter.scala:23)
	at scala.meta.internal.tokenizers.Reporter$$anon$1.syntaxError(Reporter.scala:33)
	at scala.meta.internal.tokenizers.Reporter.syntaxError(Reporter.scala:25)
	at scala.meta.internal.tokenizers.Reporter.syntaxError$(Reporter.scala:25)
	at scala.meta.internal.tokenizers.Reporter$$anon$1.syntaxError(Reporter.scala:33)
	at scala.meta.internal.tokenizers.LegacyScanner.getStringLit(LegacyScanner.scala:553)
	at scala.meta.internal.tokenizers.LegacyScanner.fetchDoubleQuote$1(LegacyScanner.scala:372)
	at scala.meta.internal.tokenizers.LegacyScanner.fetchToken(LegacyScanner.scala:376)
	at scala.meta.internal.tokenizers.LegacyScanner.nextToken(LegacyScanner.scala:211)
	at scala.meta.internal.tokenizers.LegacyScanner.foreach(LegacyScanner.scala:1011)
	at scala.meta.internal.tokenizers.ScalametaTokenizer.uncachedTokenize(ScalametaTokenizer.scala:24)
	at scala.meta.internal.tokenizers.ScalametaTokenizer.$anonfun$tokenize$1(ScalametaTokenizer.scala:17)
	at scala.collection.concurrent.TrieMap.getOrElseUpdate(TrieMap.scala:962)
	at scala.meta.internal.tokenizers.ScalametaTokenizer.tokenize(ScalametaTokenizer.scala:17)
	at scala.meta.internal.tokenizers.ScalametaTokenizer$$anon$2.apply(ScalametaTokenizer.scala:332)
	at scala.meta.tokenizers.Api$XtensionTokenizeDialectInput.tokenize(Api.scala:25)
	at scala.meta.tokenizers.Api$XtensionTokenizeInputLike.tokenize(Api.scala:14)
	at scala.meta.internal.metals.SemanticTokensProvider$.getTokens(SemanticTokensProvider.scala:28)
	at scala.meta.internal.metals.SemanticTokensProvider$.provide(SemanticTokensProvider.scala:89)
	at scala.meta.internal.metals.Compilers.$anonfun$semanticTokens$3(Compilers.scala:539)
	at scala.concurrent.impl.Promise$Transformation.run(Promise.scala:467)
	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
	at java.lang.Thread.run(Thread.java:833)

2023.12.10 18:42:56 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 18:43:22 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 18:55:27 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 18:56:15 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 18:56:35 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 18:56:49 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
2023.12.10 19:13:35 WARN  Could not find semantic tokens for: file:///T:/домашка_СГТУ/Малые%20взянные/5/docker-hadoop-mapreduce-vlad/ScalaTcpSocket.scala
2023.12.10 19:13:35 WARN  Could not find semantic tokens for: file:///T:/домашка_СГТУ/Малые%20взянные/5/docker-hadoop-mapreduce-vlad/ScalaTcpSocket.scala
2023.12.10 19:14:52 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaTcpSocket.scala
2023.12.10 19:15:18 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaJson.scala
дек. 10, 2023 7:15:56 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 1022
2023.12.10 19:16:09 WARN  no build target for: T:\домашка_СГТУ\Малые взянные\5\docker-hadoop-mapreduce-vlad\ScalaTcpSocket.scala
дек. 10, 2023 7:16:17 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
